--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://himanshu-vishwas.github.io/portfolio",
+  "homepage": "https://himanshu-vishwas.github.io/",
   "name": "personal-portfolio",
   "version": "0.1.0",
   "private": true,
